--- a/.github/workflows/1.yml
+++ b/.github/workflows/1.yml
@@ -1,7 +1,7 @@
 name: 喜马拉雅🔄自动同步🔄
 on:
   schedule:
-    - cron: '0 */1 * * *'
+    - cron: '0 6 7 * *'
   workflow_dispatch:
   watch:
     types: started
